--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,45 @@ tmp
 .yardoc
 _yardoc
 doc/
+
+# GULP STUFF
+# Node.js
+lib-cov
+*.seed
+*.log
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+
+npm-debug.log
+/node_modules
+/temp
+/dist
+
+# SublimeText project files
+*.sublime-workspace
+
+# Textmate
+*.tmproj
+*.tmproject
+tmtags
+
+# OSX
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Sass
+.sass-cache
