--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,2 @@
-*.gem
-*.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-
-# YARD artifacts
-.yardoc
-_yardoc
-doc/
-
-# GULP STUFF
-# Node.js
-lib-cov
-*.seed
-*.log
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-
-npm-debug.log
-/node_modules
-/temp
-/dist
-
-# SublimeText project files
-*.sublime-workspace
-
-# Textmate
-*.tmproj
-*.tmproject
-tmtags
-
-# OSX
 .DS_Store
-.AppleDouble
-.LSOverride
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Sass
-.sass-cache
+node_modules
